tests/baselines/reference/indexerAssignability.errors.txt
tests/cases/compiler/indexerAssignability.ts(8,1): error TS2322: Type '{}' is not assignable to type '{ [n: number]: string; }'.
  Index signature is missing in type '{}'.


==== tests/cases/compiler/indexerAssignability.ts (1 errors) ====
    var a: { [s: string]: string; };
    var b: { [n: number]: string; };
    var c: {};
    
    a = b;
    a = c;
    b = a;
    b = c;
    ~
!!! error TS2322: Type '{}' is not assignable to type '{ [n: number]: string; }'.
!!! error TS2322:   Index signature is missing in type '{}'.
    c = a;
    c = b;